fix on mobiles - content goes out of view

--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -68,6 +68,7 @@ body, input, select, textarea {
     width: 100%;
     padding: 5rem 1rem;
     @include box-sizing(border-box);
+    overflow: hidden;
   }
 
   @include media-breakpoint-down(sm) {
