--- a/resources/sass/_hobby.scss
+++ b/resources/sass/_hobby.scss
@@ -16,8 +16,8 @@
       margin: 0 20px;
 
       @include media-breakpoint-down(sm) {
-        width: 150px;
-        height: 150px;
+        width: 140px;
+        height: 140px;
         margin: 0 10px;
       }
 
